BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Project_Team_Members__c.object
<CustomObject>
    <description>PMO Tool Kit - object used to capture project team members</description>
    <fields>
        <fullName>Actual_of_Hours_Completed__c</fullName>
        <label>Actual # of Hours Completed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_amount_of_Hours__c</fullName>
        <label>Est # of Hours Assigned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management Consultant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Team_Member_Name__c</fullName>
        <label>Project Team Member Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Project Team Member</relationshipLabel>
        <relationshipName>Project_Team_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Team Member</label>
    <nameField>
        <displayFormat>PTM-{000000}</displayFormat>
        <label>Project Team Members ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>